--- a/untukmu/index.html.html
+++ b/untukmu/index.html.html
@@ -19,9 +19,11 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
-      nomorWhatsapp = ``;
+      ucapan = `Heyyo ayy
+      Maaf Aku udah bikin kemarin kacau dan ngecewain kamu kita baikan yaa
+      i love uuu sayangg`;
+      musik = `musik.mp3`;
+      nomorWhatsapp = `6282124268769`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
